--- a/index.html
+++ b/index.html
@@ -12,6 +12,57 @@
 </head>
 <body>
     <div class="container">
+        <div class="line"></div>
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+        <div class="line4"></div>
+        <div class="line5"></div>
+        <div class="line6"></div>
+        <div class="line7"></div>
+        <div class="line8"></div>
+        <div class="line9"></div>
+        <div class="line10"></div>
+        <div class="line11"></div>
+        <div class="line12"></div>
+        <div class="line13"></div>
+        <div class="line14"></div>
+        <div class="line15"></div>
+        <div class="line16"></div>
+        <div class="line17"></div>
+        <div class="line18"></div>
+        <div class="line19"></div>
+        <div class="line20"></div>
+        <div class="line21"></div>
+        <div class="line22"></div>
+        <div class="line23"></div>
+        <div class="line24"></div>
+        <div class="line25"></div>
+        <div class="line26"></div>
+        <div class="line27"></div>
+        <div class="line28"></div>
+        <div class="line29"></div>
+        <div class="line30"></div>
+        <div class="line31"></div>
+        <div class="line32"></div>
+        <div class="line33"></div>
+        <div class="line34"></div>
+        <div class="line35"></div>
+        <div class="line36"></div>
+        <div class="line37"></div>
+        <div class="line38"></div>
+        <div class="line39"></div>
+        <div class="line40"></div>
+        <div class="line41"></div>
+        <div class="line42"></div>
+        <div class="line43"></div>
+        <div class="line44"></div>
+        <div class="line45"></div>
+        <div class="line46"></div>
+        <div class="line47"></div>
+        <div class="line48"></div>
+        <div class="line49"></div>
+
         <div class="header">
             <div class="about">
                 <div class="title">About Me</div>
@@ -20,6 +71,82 @@
             </div>
             <div class="back">
                 <div class="centering">Hello Everyone! My name is Shrinav Loka and I'm currently a student at BWHS! It's Nice to Meet You! My favorite foods range from Spicy Biryani to Cheesy Pizza! And I Love to Code, Sew, and Have Fun!</div>
+                <a href="https://github.com/lokashrinav"><img class = "red" src= "github.png" alt = "Yo"></a>
+                <a href="https://www.linkedin.com/in/shrinav-loka-82151a237/"><img class = "blue" src= "linkedin.png" alt = "Yo"></a>
+            </div>
+        </div>
+        <div class="mywork"></div>
+        <div class="friday">
+            <div class="middle">
+                <div class="mywork1">
+                    <div>My Work</div>
+                </div>
+                <div class="project project1">
+                    <div class="git">
+                        <a href="https://github.com/lokashrinav/Library"><img class = "image1" src="github.png"></a>
+                    </div>
+                    <div class="super">
+                        <img class = "image1-1" src="Screenshot1.png">
+                    </div>
+                    <div class = "click">
+                        Click
+                    </div>
+                </div>
+                <div class="project project2">
+                    <div class="git">
+                        <a href="https://github.com/lokashrinav/Admin-Dashboard"><img class = "image1" src="github.png"></a>
+                    </div>
+                    <div class="super">
+                        <img class = "image1-1" src="Screenshot2.png">
+                    </div>
+                    <div class = "click">
+                        Click
+                    </div>
+                </div>
+                <div class="project project3">
+                    <div class="git">
+                        <a href="https://github.com/lokashrinav/Sign-up-Form"><img class = "image1" src="github.png"></a>
+                    </div>
+                    <div class="super">
+                        <img class = "image1-1" src="Screenshot3.png">
+                    </div>
+                    <div class = "click">
+                        Click
+                    </div>
+                </div>
+                <div class="project project4">
+                    <div class="git">
+                        <a href="https://github.com/lokashrinav/Calculator"><img class = "image1" src="github.png"></a>
+                    </div>
+                    <div class="super">
+                        <img class = "image1-1" src="Screenshot4.png">
+                    </div>
+                    <div class = "click">
+                        Click
+                    </div>
+                </div>
+                <div class="project project5">
+                    <div class="git">
+                        <a href="https://github.com/lokashrinav/odin-recipes"><img class = "image1" src="github.png"></a>
+                    </div>
+                    <div class="super">
+                        <img class = "image1-1" src="Screenshot5.png">
+                    </div>
+                    <div class = "click">
+                        Click
+                    </div>
+                </div>
+                <div class="project project6">
+                    <div class="git">
+                        <a href="https://github.com/lokashrinav/mini-project-grid"><img class = "image1" src="github.png"></a>
+                    </div>
+                    <div class="super">
+                        <img class = "image1-1" src="Screenshot6.png">
+                    </div>
+                    <div class = "click">
+                        Click
+                    </div>
+                </div>
             </div>
         </div>
     </div>
